traces/bug_711.txt
examples++-load/lapack.cpp:1190: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/lapack.cpp:1190:1: initialization of callDoLoadInit
1188.   }
1189.   
1190. > LOADFUNC(Load_Init)

examples++-load/lapack.cpp:1190:1: call to DoLoadInit
1188.   }
1189.   
1190. > LOADFUNC(Load_Init)

examples++-load/lapack.cpp:1190:1: call to addInitFunct
  1188.   }
  1189.   
  1190. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
